crates/oxc_react_compiler/tests/snapshots/capture_mutate-across-fns-iife.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/capture_mutate-across-fns-iife.js
---
import { c as _c } from "react/compiler-runtime";
function component(a) {
	const $ = _c(2);
	let z;
	if ($[0] !== a) {
		z = { a };
		(function() {
			z.b = 1;
		})();
		$[0] = a;
		$[1] = z;
	} else {
		z = $[1];
	}
	return z;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: [2]
};
