crates/oxc_react_compiler/tests/snapshots/capture_mutate-across-fns.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/capture_mutate-across-fns.js
---
import { c as _c } from "react/compiler-runtime";
function component(a) {
	const $ = _c(2);
	let z;
	if ($[0] !== a) {
		z = { a };
		const f0 = function() {
			const f1 = function() {
				z.b = 1;
			};
			f1();
		};
		f0();
		$[0] = a;
		$[1] = z;
	} else {
		z = $[1];
	}
	return z;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
