crates/oxc_react_compiler/tests/snapshots/captured-callback-overwritten-before-wrapper-escapes.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/captured-callback-overwritten-before-wrapper-escapes.js
---
import { c as _c } from "react/compiler-runtime";
function useFoo() {
	const $ = _c(1);
	let wrapper;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		let count = 0;
		let cb = () => count++;
		wrapper = () => cb();
		cb = _temp;
		$[0] = wrapper;
	} else {
		wrapper = $[0];
	}
	return wrapper;
}
function _temp() {
	return null;
}
