crates/oxc_react_compiler/tests/snapshots/captured-hoisted-function-overwritten-before-declaration.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/captured-hoisted-function-overwritten-before-declaration.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		let count = 0;
		wrapper = _temp;
		function wrapper() {
			count++;
		}
		t0 = () => wrapper();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
function _temp() {
	return null;
}
