crates/oxc_react_compiler/tests/snapshots/capturing-fun-alias-captured-mutate-arr-2-iife.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/capturing-fun-alias-captured-mutate-arr-2-iife.js
---
import { c as _c } from "react/compiler-runtime";
const { mutate } = require("shared-runtime");
function component(foo, bar) {
	const $ = _c(3);
	let x;
	if ($[0] !== bar || $[1] !== foo) {
		x = { foo };
		const y = { bar };
		const a = [y];
		const b = x;
		a.x = b;
		mutate(y);
		$[0] = bar;
		$[1] = foo;
		$[2] = x;
	} else {
		x = $[2];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: ["foo", "bar"]
};
